--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Mybatis
 mybatis.typeAliasesPackage=com.example.study.model
 mybatis.mapperLocations=classpath:mapper/*.xml
+# Mybatis SQL log
+logging.level.com.example.study.mapper=debug
