添加路径白名单配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,12 @@ jwt:
   expiration: 604800 # 7天
   tokenHead: 'Bearer '
 
+security:
+  ignored: # 路径白名单
+    urls:
+      - /login
+      - /register
+
 logging:
   level:
     com.example.study.mapper: debug
