添加API文档注释

--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    // api文档
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.4.3.4'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
