--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // 参数校验
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     // api文档
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
