添加图片验证码

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // api文档
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.4.3.4'
     compileOnly 'org.projectlombok:lombok'
