--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ security:
     urls:
       - /login # 登录
       - /register # 注册
+      - /captcha # 获取图片验证码
       # swagger
       - /swagger-ui/index.html
       - /swagger-resources/**
@@ -38,6 +39,24 @@ security:
       - /**/*.css
       - /**/*.ico
       - /webjars/springfox-swagger-ui/**
+
+redis:
+  host: localhost
+  database: 0
+  port: 6379
+  password:
+  jedis:
+    pool:
+      max-active: 8
+      max-wait: -1ms
+      max-idle: 8
+      min-idle: 0
+  timeout: 3000ms
+  key:
+    prefix:
+      captcha: 'study:captcha:'
+    expire:
+      captcha: 60 # 图片验证码有效时间（秒）
 
 logging:
   level:
