--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,7 @@ security:
       - /login # 登录
       - /register # 注册
       - /captcha # 获取图片验证码
+      - /test/** # 测试接口
       # swagger
       - /swagger-ui/index.html
       - /swagger-resources/**
